--- a/HW2/exhibit/source/exhibit.html
+++ b/HW2/exhibit/source/exhibit.html
@@ -11,76 +11,105 @@
     </head>
 
 <body>
-    <nav class="nav-bar">
-        <div class="museum-name">jan shrem and maria 
-            <span class="middle-museum-name">
-                manetti shrem museum
-            </span>of art
-        </div>
-        <ul class="top-nav">
-		<li> <a class="nav-link" href="#">Home</a>|</li>
-		<li> <a class="nav-link" href="#">About</a>|</li>
-		<li> <a class="last-nav-link" href="#">Contact</a> </li>
-        </ul>
-    </nav>
+	<nav class="nav-bar">
+		<div class="museum-name">
+			jan shrem and maria 
+			<span class="middle-museum-name">
+			manetti shrem museum
+			</span>of art
+		</div>
+		<ul class="top-nav">
+			<li> <a class="nav-link" href="#">Home</a>|</li>
+			<li> <a class="nav-link" href="#">About</a>|</li>
+			<li> <a class="last-nav-link" href="#">Contact</a> </li>
+		</ul>
+	</nav>
     
-    <header>
-        <img class="corridor-install" src="../assets/corridorInstallation.jpg" alt="Image does not exist.">
-	<ul class="corridor-author">
-		<li id="author" class="author-description">Bruce Nauman</li>
-		<li id="corridor-color" class="author-description">Blue and Yellow Corridor</li>
-	</ul>
-    </header>
+	<header>
+        	<img class="corridor-install" src="../assets/corridorInstallation.jpg" alt="Image does not exist.">
+		<ul class="corridor-author">
+			<li id="author" class="author-description">Bruce Nauman</li>
+			<li id="corridor-color" class="author-description">Blue and Yellow Corridor</li>
+		</ul>
+	</header>
 
-    <main>
-    	<ul class="p-title">
-		<li class="extension-date">Extended through April 14th</li>
-		<li class="guest-curator">Guest Curator: Ted Mann</li>
-	</ul>
-	
-	<p>
-		Coinciding with the opening of Bruce Nauman’s (MFA ’66, UC
-		Davis) retrospective at The Museum of Modern Art, New York,
-		this exhibition features the first realization of a
-		participatory environment Nauman conceived in 1970. The work
-		is a narrow passageway that wraps around an existing room,
-		combining colored fluorescent light and closed-circuit video
-		to manipulate the viewer’s perceptual experience. An adjacent
-		gallery includes artworks that situate the corridor within the
-		artist’s career.
-	</p>
-        <p>
-            Few living artists have done as much to expand the boundaries
-            of art since 1960 as Bruce Nauman. During the mid-late 1960s -
-            beginning with his time as a graduate student in the UC Davis
-            studio art program, where he received his MA in 1966 - Nauman
-            was at the forefront of a generation of artists that placed
-            process and activity over static, predetermined forms, and
-            that took up language and the body as materials. Unbound by
-            traditional divisions of medium, Nauman has moved freely
-            between sculpture, performance, film, video, photography,
-            drawing, printmaking, and large-scale installation.
-        </p>
-        <p>
-            This exhibition coincides with a major Nauman retrospective,
-            co-organized by The Museum of Modern Art (MoMA) and the
-            Schaulager Basel, the artist's first in over twenty
-            years. While the retrospective provides an opportunity to
-            survey the full breadth of Nauman's work, the present
-            exhibition at the Manetti Shrem Museum focuses on a single,
-            exceptional artwork: a large-scale participatory environment
-            from 1970-71. Between 1969 and 1976, Nauman designed some
-            forty corridors, rooms, and other architectural installations.
-            The majority of these installations have been built for
-            exhibition on at least one occasion, but Blue and Yellow
-            Corridor is one of a handful that have remained on paper, in
-            the form of drawings by the artist. Although Nauman originally
-            developed the concept for this particular work in three
-            drawings of 1970-1971, this exhibition represents the first
-            time that the installation has actually been realized.
-        </p>
-    </main>
-
+	<main>
+		<div class="bruce-sketch">
+			<div class="bruce-text">
+				<ul class="p-title">
+					<li class="extension-date">Extended through April 14th</li>
+					<li class="guest-curator">Guest Curator: Ted Mann</li>
+					<li class="line"><hr class="line"></li>
+				</ul>
+				<p class="p1">
+					Coinciding with the opening of Bruce Nauman’s (MFA ’66, UC
+					Davis) retrospective at The Museum of Modern Art, New York,
+					this exhibition features the first realization of a
+					participatory environment Nauman conceived in 1970. The work
+					is a narrow passageway that wraps around an existing room,
+					combining colored fluorescent light and closed-circuit video
+					to manipulate the viewer’s perceptual experience. An adjacent
+					gallery includes artworks that situate the corridor within the
+					artist’s career.
+				</p>
+			</div>
+			<img class="sketch-img" src="../assets/bruceSketch.jpg" alt="Image does not exist.">
+		</div>
+		<div class="moreText">
+			<div id="middleContent" class="readLess">
+				<div id="bruce-img">
+					<img class="bruce-in-corridor" src="../assets/bruceInGreenCorridor.jpg" alt="Image does not exist.">
+				</div>
+				<p class="bottom-text">
+					Few living artists have done as much to expand the boundaries
+					of art since 1960 as Bruce Nauman. During the mid-late 1960s -
+					beginning with his time as a graduate student in the UC Davis
+					studio art program, where he received his MA in 1966 - Nauman
+					was at the forefront of a generation of artists that placed
+					process and activity over static, predetermined forms, and
+					that took up language and the body as materials. Unbound by
+					traditional divisions of medium, Nauman has moved freely
+					between sculpture, performance, film, video, photography,
+					drawing, printmaking, and large-scale installation.
+				</p>
+				<p class="bottom-text p3">
+					This exhibition coincides with a major Nauman retrospective,
+					co-organized by The Museum of Modern Art (MoMA) and the
+					Schaulager Basel, the artist's first in over twenty
+					years. While the retrospective provides an opportunity to
+					survey the full breadth of Nauman's work, the present
+					exhibition at the Manetti Shrem Museum focuses on a single,
+					exceptional artwork: a large-scale participatory environment
+					from 1970-71. Between 1969 and 1976, Nauman designed some
+					forty corridors, rooms, and other architectural installations.
+					The majority of these installations have been built for
+					exhibition on at least one occasion, but Blue and Yellow
+					Corridor is one of a handful that have remained on paper, in
+					the form of drawings by the artist. Although Nauman originally
+					developed the concept for this particular work in three
+					drawings of 1970-1971, this exhibition represents the first
+					time that the installation has actually been realized.
+				</p>
+			</div>
+		</div>
+		<button id="readMoreButton" class="readMore readButton" onclick="readButton()">Read More &#8594;</button>
+		<button id="readLessButton" class="readLess readButton" onclick="readButton()">Read Less &#8594;</button>
+		<footer id="footerContent" class="bottomWeb">
+			<ul class="address">
+				<li class="title">Manetti Shrem Museum</li>
+				<li class="footer-content">254 Old Davis Rd.</li>
+				<li class="footer-content">Davis, CA 95616</li>
+			</ul>
+			<ul class="hours">
+				<li class="title">Hours</li>
+				<li class="footer-content">Tuesday, Wednesday and Friday: Noon-6 pm<li>
+				<li class="footer-content">Thursday: Noon-9 pm</li>
+				<li class="footer-content">Saturday-Sunday: 11 am-5 pm</li>
+				<li class="footer-content">Monday: Closed</li>
+			</ul>
+		</footer>
+	</main>
+	<script src="exhibit.js"> </script>
 </body>
 </html>
 
