Finished doppler radar

--- a/HW3/weatherWeb.html
+++ b/HW3/weatherWeb.html
@@ -41,7 +41,7 @@
 				<div class="map">
 					<img src="http://radar.weather.gov/ridge/Overlays/Topo/Short/DAX_Topo_Short.jpg" alt="Image not found." class="baseImg">
 					<img src="http://radar.weather.gov/ridge/Overlays/Cities/Short/DAX_City_Short.gif" alt="Image not found." class="cityNames">
-					<img src="https://radar.weather.gov/ridge/RadarImg/N0R/DAX_N0R_0.gif" alt="Image not found." class="radarImg">
+					<img src="https://radar.weather.gov/ridge/RadarImg/N0R/DAX_N0R_0.gif" alt="Image not found." class="radarImg" id="radarImg">
 				</div>
 			</div>
 		</div>
