finished adding a basic html file

--- a/HW5/translation.html
+++ b/HW5/translation.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width">
-		<title>Translation/title>
+		<title>Translation</title>
 		<link rel="stylesheet" type="text/css" href="reset.css">
 	</head>
 
@@ -15,8 +15,9 @@
 
 		<main>
 			<div id="inputDiv">
-				<input id="word">
+				<input id="phrase">
 				<button id="submitButton" onclick="makeCorsRequest()">Submit</button>
+				<button id="saveButton">Save</button>
 			</div>
 			<div id="outputDiv">
 				<p id="outputGoesHere"></p>
