--- a/HW5/translation.html
+++ b/HW5/translation.html
@@ -16,8 +16,8 @@
 		<main>
 			<div id="inputDiv">
 				<input id="phrase">
-				<button id="submitButton" onclick="makeCorsRequest()">Submit</button>
-				<button id="saveButton">Save</button>
+				<button id="submitButton" onclick="translationCorsRequest()">Submit</button>
+				<button id="saveButton" onclick="storeCorsRequest()">Save</button>
 			</div>
 			<div id="outputDiv">
 				<p id="outputGoesHere"></p>
